--- a/aip.tex
+++ b/aip.tex
@@ -2683,8 +2683,8 @@ The \emph{fundamental sequences} associated to pair $(\matA, \vv{u})$ and a posi
 0 	&  \text{if }  s > \mathcal{E}_r(\matA, \vv{u})
 \end{cases} \\
 \eta_{r^s}(\matA, \vv{u}) & = \begin{cases} 
-\delta_{r^s}(\matA, \vv{u}) & \hspace{62pt} \text{if }1 \leq s \leq \mathcal{E}_r(\matA, \vv{u}) \\ 
-1 & \hspace{62pt} \text{if } s >  \mathcal{E}_r(\matA, \vv{u}) \\ 
+\delta_{r^s}(\matA, \vv{u}) & \hspace{61pt} \text{if }1 \leq s \leq \mathcal{E}_r(\matA, \vv{u}) \\ 
+1 & \hspace{61pt} \text{if } s >  \mathcal{E}_r(\matA, \vv{u}) \\ 
 \end{cases}
 \end{align*}
 
@@ -2826,16 +2826,22 @@ To start, note that, in this context, the Newton polyhedron $\N$ is particularly
 \label{finishing-with-the-fundamental-sequences: P}
 Given a pair $(\matA, \vv{u})$ and positive integer $r$, the fundamental sequences $\{ \lambda_{r^s}(\matA, \vv{u})\}_{s=1}^{\infty}$  and $\{ \eta_{r^s}(\matA, \vv{u}) \}_{s=1}^{\infty}$ satisfy the conditions described in \Cref{main theorem wrt diagonal: T}.  That is, each is an eventually periodic sequence of rational numbers, with each term $\lambda_{r^s}(\matA, \vv{u})$  nonnegative, and each term $\eta_{r^s}(\matA, \vv{u})$  positive.
 \end{proposition}
-\daniel[inline]{Update the proof.  Maybe address what is going on in the context of the second part of \Cref{fundamental-sequences: L}.}
+\daniel[inline]{Address what is going on in the context of the second part of \Cref{fundamental-sequences: L}?}
 
 \begin{proof}
-   Fix a pair $(\matA,\vv{u})$, and set $\Q=\Q_p(\matA,\vv{u})$.
-   By \Cref{main theorem wrt diagonal: T}, the non-leading coefficients under consideration are the rational numbers $-(\delta_{q}(\matA,\vv{u})-\epsilon_{qp}(\matA,\vv{u}))$ whenever $q < \Q$, the rational number $-(\delta_{\Q}(\matA,\vv{u}) - 1)$ whenever $\Q$ is finite, the rational numbers $-\delta_q(\matA,\vv{u})$ whenever $q\le \Q$, and $-1$.
+   Fix $(\matA,\vv{u})$ and $r$ as above, and set $\mathcal{E}=\mathcal{E}_r(\matA,\vv{u})$ and $\Q = \Q_r(\matA,\vv{u})$.  
+   
+   By definition, every $\delta_{r^s}(\matA, \vv{u})$ and $\delta_{r^s}(\matA, \vv{u})$ is rational, and thus, so is each term $\eta_{r^s}(\matA, \vv{u})$ and $\lambda_{r^s}(\matA, \vv{u})$.  When $\mathcal{E} = \infty$,  each such term is eventually constant, and when $\mathcal{E} \neq \infty$,  the eventually periodicity of the graph $\sprout_p^{\ast}(\matA, \vv{u})$ described by \Cref{elementary2: R}\eqref{elementary2 periodic in e} implies that each such term is eventually periodic in $s$.  
+   
+Furthermore, each $\eta_{r^s}(\matA, \vv{u})$ is either $1$, or equal to $\delta_{r^s}(\matA, \vv{u})$, which is a universal deficit, and hence, must be positive.  Thus, to conclude, it remains to prove that each $\lambda_{r^s}(\matA, \vv{u})$ is nonnegative whenever $\mathcal{E} \neq \infty$ and $1 \leq s \leq \mathcal{E}$.
 
-   The proofs that the coefficients of the first and second type are nonpositive are similar, so we will only consider the coefficients of the second type.
-   Toward this, suppose that $\Q$ is finite.
-   In this case, $\S^{\ast}_{\Q p}(\matA,\vv{u})$ is empty, and so there is an edge $(\matB,\vv{v}) \to (\matC,\vv{z})$ in $\sprout_p(\matA)$ whose initial pair lies in $\S^{\ast}_{\Q}(\matA,\vv{u})$, and whose terminal pair is not very small. \Cref{non-leading coefficients: L} then tells us that $\delta_{\Q}(\matA,\vv{u}) = \udeficit(\matB,\vv{v},p)$ is at least $\degree(\matC,\vv{z})$, which is greater than $1$ as $(\matC,\vv{z})$ is not very small.
-   Thus, $-(\delta_\Q(\matA,\vv{u})-1)$ is negative.
+We first consider the situation when $\mathcal{E} \neq \infty$ and $1 \leq s < \mathcal{E}$.   In this case, by definition of $\mathcal{E}$, both $\S_{r^{s}}^{\ast}(\matA, \vv{u})$ and $\S_{r^{s+1}}^{\ast}(\matA, \vv{u})$ are non-empty, and hence, there exists a pair $(\matC, \vv{z})$ in the latter set that is a $r$-sprout of a pair $(\matB, \vv{v})$ in the former.  In this case, \Cref{fundamental-sequences: D} then tells us that 
+\[ \lambda_{r^s}(\matA, \vv{u}) = \delta_{r^s}(\matA, \vv{u}) - \epsilon_{r^{s+1}}(\matA, \vv{u}) = \udeficit(\matB, \vv{v}, r) - \deg(\matC, \vv{z}) \]  
+ and \Cref{fundamental-sequences: L} then implies that the right-most difference must be nonnegative.  
+   \newpage
+ 
+Finally, we consider the case that $s = \mathcal{E} \neq \infty$.  In this case,  $\S^{\ast}_{r^{\mathcal{E}+1}}(\matA,\vv{u})$ is empty, and so there is an edge $(\matB,\vv{v}) \to (\matC,\vv{z})$ in $\sprout_p(\matA)$ whose initial pair lies in $\S^{\ast}_{p^{\mathcal{E}}}(\matA,\vv{u})$, and whose terminal pair is not very small. Thus, 
+\[ \lambda_{r^{\mathcal{E}}}(\matA, \vv{u}) = \delta_{r^{\mathcal{E}}}(\matA, \vv{u}) - 1 = \udeficit(\matB, \vv{v}, r) - 1 \geq \deg(\matC, \vv{z}) - 1   \] where the last inequality follows from \Cref{fundamental-sequences: L}.   However, as that $(\matC, \vv{z})$ is not very small, the right-most term above must be positive.
 \end{proof}
 
 \todo[inline]{
