--- a/aip.tex
+++ b/aip.tex
@@ -2842,7 +2842,7 @@ We first consider the situation when $\mathcal{E} \neq \infty$ and $1 \leq s < \
  and \Cref{fundamental-sequences: L} then implies that the right-most difference must be nonnegative.  
  
 Finally, we consider the case that $s = \mathcal{E} \neq \infty$.  In this case,  $\S^{\ast}_{r^{\mathcal{E}+1}}(\matA,\vv{u})$ is empty, and so there is an edge $(\matB,\vv{v}) \to (\matC,\vv{z})$ in $\sprout_p(\matA)$ whose initial pair lies in $\S^{\ast}_{p^{\mathcal{E}}}(\matA,\vv{u})$, and whose terminal pair is not very small. Thus, 
-\[ \lambda_{r^{\mathcal{E}}}(\matA, \vv{u}) = \delta_{r^{\mathcal{E}}}(\matA, \vv{u}) - 1 = \udeficit(\matB, \vv{v}, r) - 1 \geq \deg(\matC, \vv{z}) - 1   \] where the last inequality follows from \Cref{fundamental-sequences: L}.   However, as that $(\matC, \vv{z})$ is not very small, the right-most term above must be positive.
+\[ \lambda_{r^{\mathcal{E}}}(\matA, \vv{u}) = \delta_{r^{\mathcal{E}}}(\matA, \vv{u}) - 1 = \udeficit(\matB, \vv{v}, r) - 1 \geq \deg(\matC, \vv{z}) - 1   \] where the last inequality follows from \Cref{fundamental-sequences: L}.   However, as $(\matC, \vv{z})$ is not very small, the right-most term above must be positive.
 \end{proof}
 
 We now focus on determining the values of the terms $\lambda_{r^s}(\matA, \vv{u})$ and $ \eta_{r^s}(\matA, \vv{u})$ in some important special cases.  To do so, we require another preliminary result.
