--- a/aip.tex
+++ b/aip.tex
@@ -3119,6 +3119,7 @@ where $\ideald_\vv{u}$ denotes the diagonal ideal associated to the positive poi
    Conversely, if $x^{\vv{v}} \in \ideala^{[t]}$, then $\crit(\ideala,\ideald_{\vv{v}+\vv{1}}) > t$, as $x^{\vv{v}}\notin \ideald_{\vv{v}+\vv{1}}$.
    If $\crit(\ideala, \ideald_{\vv{v}+\vv{1}}) \le 1$, then \Cref{finite-representatives-small-crits: P} shows that there exists $\vv{u} \in \setW$ with $\vv{u} \le \vv{v} +\vv{1}$ with $\crit(\ideala,\ideald_{\vv{u}}) = \crit(\ideala, \ideald_{\vv{v}+\vv{1}}) > t$.
    Since $\vv{v} \ge \vv{u} - \vv{1}$, $x^\vv{v}$ lies in the right hand side of \eqref{eq: description of frobenius powers in terms of crits}.
+   \todo[inline]{TBC}
 \end{proof}
 
 \begin{example}[Running example: Frobenius powers]
